More bux fixes - Search submit on enter key click, text overflow fixed

--- a/src/components/InstaProfileCard/InstaProfileCard.css
+++ b/src/components/InstaProfileCard/InstaProfileCard.css
@@ -72,8 +72,19 @@
     font-size: 20px;
 }
 
+.profile-bio {
+    padding:10px;
+}
+
 @media only screen and (max-width:768px) {
     .profile-card {
         width:300px;
+    }
+
+    .profile-bio {
+        overflow:hidden;
+        text-overflow:ellipsis;
+        font-size:13px;
+        padding:10px;
     }
 }
